tests/specs/run/swc_syntax_error/swc_syntax_error.ts.out
error: Unexpected token `}`. Expected an identifier, void, yield, null, await, break, a string literal, a numeric literal, true, false, `, -, import, this, typeof, {, [, (
  |
4 | }
  | ~
    at [WILDCARD]syntax_error.ts:4:1
